# multi-sub-packages

./: .gitignore  README.md  pyproject.toml
src/multi_sub_package/: __init__.py
src/multi_sub_package/package_A/: print_module.py
src/multi_sub_package/package_B/: print_module.py
src/multi_sub_package/package_C/: print_module.py
