[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_sub_package"
version = "0.1.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
    { name = "Dilanka Rathnasiri", email = "rdilanka17@gmail.com" },
]
maintainers = [
    { name = "Dilanka Rathnasiri", email = "rdilanka17@gmail.com" },
]
description = "Just for fun"
readme = "README.md"
license = { file = "LICENSE" }
